-------------------------------------------------------------------------------
                             wxWidgets Change Log
-------------------------------------------------------------------------------

Note: This file contains the list of changes since wxWidgets 3.x, please see
      docs/changes_30.txt for the changes in the previous versions.


3.1.0: (released 2014-xx-xx)
----------------------------

All (GUI):

- XRC handler for wxAuiToolBar added (Kinaou Hervé).
- Add wxHtmlWindow::SetDefaultHTMLCursor() (Jeff A. Marr).
- Add default ctor and Create() to wxContextHelpButton (Hanmac).

wxGTK:

- Don't intercept accelerators in wxTextValidator.

wxMSW:

- Make wxFILTER_INCLUDE_LIST in wxTextValidator actually usable.