@@ -626,7 +626,7 @@ bool wxClipboard::AddData( wxDataObject *data )
 
     // get formats from wxDataObjects
     const size_t count = data->GetFormatCount();
-    wxDataFormatArray formats(new wxDataFormat[count]);
+    wxDataFormatArray formats(count);
     data->GetAllFormats(formats.get());
 
     // always provide TIMESTAMP as a target, see comments in selection_handler
@@ -690,7 +690,7 @@ bool wxClipboard::GetData( wxDataObject& data )
     // get all supported formats from wxDataObjects: notice that we are setting
     // the object data, so we need them in "Set" direction
     const size_t count = data.GetFormatCount(wxDataObject::Set);
-    wxDataFormatArray formats(new wxDataFormat[count]);
+    wxDataFormatArray formats(count);
     data.GetAllFormats(formats.get(), wxDataObject::Set);
 
     for ( size_t i = 0; i < count; i++ )
