@@ -9,6 +9,10 @@ Note: This file contains the list of changes since wxWidgets 3.x, please see
 3.1.0: (released 2014-xx-xx)
 ----------------------------
 
+All:
+
+- Add wxScopedArray ctor taking the number of elements to allocate.
+
 All (GUI):
 
 - XRC handler for wxAuiToolBar added (Kinaou Hervé).
